terraform/main.tf
resource "aws_security_group" "nautobot_sg" {
  name        = "nautobot-sg"
  description = "Allow SSH and Nautobot traffic"
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

data "aws_vpc" "default" {
  default = true
}

data "aws_subnet_ids" "default_subnets" {
  vpc_id = data.aws_vpc.default.id
}

resource "aws_instance" "nautobot_vm" {
  ami                    = var.ami_id
  instance_type          = var.instance_type
  key_name               = var.ssh_key_name
  vpc_security_group_ids = [aws_security_group.nautobot_sg.id]

  associate_public_ip_address = true

  # Use the default VPC & default subnet automatically
  subnet_id = data.aws_subnet_ids.default_subnets.ids[0]

  tags = {
    Name = "nautobot-poc"
  }
}
